--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,15 @@
 	<parent>
 		<groupId>org.springframework.data.build</groupId>
 		<artifactId>spring-data-parent</artifactId>
-		<version>2.5.0-SNAPSHOT</version>
+		<version>2.5.8</version>
 	</parent>
 
 	<properties>
 		<commons.collections>3.2.1</commons.collections>
 		<commons.lang>3.1</commons.lang>
 		<httpcomponents>4.3.1</httpcomponents>
-		<solr>8.5.2</solr>
-		<springdata.commons>2.5.0-SNAPSHOT</springdata.commons>
+		<solr>9.0.0</solr>
+		<springdata.commons>2.5.8</springdata.commons> <!-- 2.5.9+ throws ClassNotFoundException: javax.sql.DataSource in the org.springframework.data.solr.repository tests -->
 		<java-module-name>spring.data.solr</java-module-name>
 	</properties>
 
@@ -55,6 +55,12 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>javax.activation-api</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+
 		<!-- SPRING -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -148,6 +154,18 @@
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-langid</artifactId>
+			<version>${solr}</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jcl-over-slf4j</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-scripting</artifactId>
 			<version>${solr}</version>
 			<scope>test</scope>
 			<exclusions>
